--- a/src/app/app.css
+++ b/src/app/app.css
@@ -25,7 +25,7 @@ label {
 .lg-text-input {
   width: 100%;
   padding: 1rem;
-  border: 2px solid black;
+  border: 2px solid rgb(214, 17, 17);
   display: block;
   box-sizing: border-box;
   font-size: 1rem;
