--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
 <div class = "main">
   <h1>{{title}}</h1>
+
+  <button (click)="toggleDarkMode()">
+    {{ isDarkMode ? 'Light Mode' : 'Dark Mode' }}
+  </button>
   
   <label for="addItemInput">What would you like to do today?</label>
 
